--- a/mysql-chart/templates/ingress.yaml
+++ b/mysql-chart/templates/ingress.yaml
@@ -1,16 +1,17 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-mysql
+  name: ingress-hosts
 spec:
   rules:
-  - host: mysql.devops6.ru
+  - host: devops6.ru
     http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
-              name: mysql-service
+              name: frontend-service
               port:
-                number: 3306
+                number: 80
