--- a/devops6-chart/templates/ingress.yaml
+++ b/devops6-chart/templates/ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-hosts
+  namespace: devops6-app
 spec:
   rules:
   - host: devops6.ru
