--- a/devops6-chart/templates/service.yaml
+++ b/devops6-chart/templates/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: devops6-app
   labels:
     name: backend-service
 spec:
@@ -16,6 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db-service
+  namespace: devops6-app
   labels:
     name: db-service
 spec:
@@ -29,11 +31,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: devops6-app
   labels:
     name: frontend-service
 spec:
   ports:
   - port: 80
   selector:
-    name: frontend
+    name: {{ .Release.Name }}frontend
   type: ClusterIP
